# geo_toolz

./: .gitignore  README.md  _toc.yml  myst.yml  pyproject.toml
environments/: environment.yaml
geo_toolz/: extremes.py  masks.py
geo_toolz/_src/crs/: coords.py  test_coords.py
geo_toolz/_src/data/ocean/ssh/: alongtrack.py
geo_toolz/_src/data/reanalysis/: gee.py
geo_toolz/_src/detrend/: anomalies.py  climatology.py
geo_toolz/_src/discretize/: binning.py  grid.py  period.py
geo_toolz/_src/encoders/: space.py  test_space.py  time.py
geo_toolz/_src/extremes/: bm.py  pot.py  pp.py
geo_toolz/_src/interpolate/: fillnan.py  resample.py  test_fillnan.py
geo_toolz/_src/kinematics/: ssh.py
geo_toolz/_src/masks/: country.py  land.py  ocean.py
geo_toolz/_src/spectral/: psd.py
geo_toolz/_src/subset/: where.py
geo_toolz/_src/utils/: io.py
geo_toolz/_src/validation/: coords.py  ssh.py
notebooks/: software.md
notebooks/data/gee/: xee_demo.ipynb
notebooks/data/ocean/: ssh_alongtrack.ipynb  sst_missing.ipynb
notebooks/encoders/: rescale_time.ipynb
notebooks/extremes/: extremes_demo_ts.ipynb
notebooks/geo_ops/: geo_ops_intro.md
notebooks/masks/: extremes_demo_ts-Copy1.ipynb
notes/: background.md  index.md  software.md
notes/data/: ee.md
notes/extremes/: extremes_analysis.md  extremes_intro.md
notes/interpolation/: interpolation_intro.md
notes/sensitivity_analysis/: demo.md
