[tool.poetry]
name = "geo-toolz"
version = "0.0.1"
description = "Pre-, Geo-, and ML processing for Earth System Data Cubes applactions."
authors = ["Juan Emmanuel Johnson <jemanjohnson34@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jejjohnson/geo_toolz"
keywords = ["xarray", "geoscience", "toolz"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MACOS/Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha copy",

]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.12.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
regionmask = "^0.11.0"
rioxarray = "^0.15.1"
geocube = "^0.5.1"
odc-geo = "^0.4.3"
xarray-einstats = "^0.7.0"
xskillscore = "^0.0.26"
metpy = "^1.6.1"
pyinterp = "^2024.3.0"
xarray = "^2024.2.0"
tqdm = "^4.66.2"
pyproj = "^3.6.1"
copernicusmarine = "^1.0.6"
cdsapi = "^0.6.1"
xee = "^0.0.11"
pint-xarray = "^0.3"
xrft = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.2"
beartype = "^0.13.1"
ruff = "^0.0.263"
black = "^23.3.0"
isort = "^5.12.0"
autoroot = "^1.0.0"
pydantic = "^2.6.4"
loguru = "^0.7.2"


[tool.poetry.group.exp.dependencies]
loguru = "^0.7.0"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
autoroot = "^1.0.0"
omegaconf = "^2.3.0"


[tool.poetry.group.jlab.dependencies]
ipykernel = "^6.22.0"
autoroot = "^1.0.0"
jupyter = "^1.0.0"
jupyterlab = "^4.1.5"


[tool.poetry.group.jbook.dependencies]
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
sphinx-proof = "^0.1.3"
jupytext = "^1.14.5"


[build-system]
requires = ["poetry-core", "cmake"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["geo_toolz"]


[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722", "F821"]
ignore-init-module-imports = true


[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false
